--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,6 +1,7 @@
 /* Body */
 body {
-  font-family: Helvetica;
+  margin: 0;
+  font-family: "Helvetica", sans-serif;
   font-size: 22px;
   color: seashell;
   background-color: black;
@@ -10,6 +11,8 @@ body {
 
 .container {
   display: flex;
+  justify-content: center;
+  flex-wrap: no-wrap;
 }
 
 /* Header */
@@ -17,21 +20,81 @@ header {
   height: 69px;
   border-bottom: 1px solid seashell;
   position: fixed;
+  align-items: center;
+  background-color: black;
   width: 100%;
+  z-index: 5;
 }
 
-.logo {
+.logo img {
   float: left;
   margin-left: 10px;
   height: 50px;
+  align-items: center;
 }
 
 nav {
   width: 75%;
   text-align: right;
+  flex-grow: 1;
 }
 
-span a {
+nav span {
+  display: inline-block;
+  padding: 20px 10px;
+}
+
+a {
   text-decoration: underline;
   color: seashell;
+}
+
+/* Main */
+
+#mission {
+  padding-top: 70px;
+  background-image: url("../images/img-mission-background.jpg");
+  height: 700px;
+  width: 1200px;
+}
+
+.banner {
+  margin: auto;
+  background-color: black;
+  width: 100%;
+}
+
+/* Specials */
+
+#featured {
+  padding-top: 70px;
+  width: 1000px;
+  margin: auto;
+}
+
+.specials {
+  flex-wrap: wrap;
+}
+
+.special img {
+  height: 200px;
+  margin: 10px;
+  display: block;
+}
+
+/* Locations */
+
+#locations {
+  padding-top: 70px;
+  background-image: url("../images/img-locations-background.jpg");
+  height: 500px;
+  width: 1100px;
+  margin: auto;
+}
+
+.location {
+  min-width: 300px;
+  margin: 15px 40px;
+  background-color: black;
+  opacity: 1;
 }
