--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -56,6 +56,7 @@ a {
   background-image: url("../images/img-mission-background.jpg");
   height: 700px;
   width: 1200px;
+  margin: auto;
 }
 
 .banner {
@@ -97,4 +98,17 @@ a {
   margin: 15px 40px;
   background-color: black;
   opacity: 1;
+}
+
+/* Contact */
+
+.contact {
+  height: 200px;
+}
+
+/* Footer */
+
+.copyright {
+  text-align: left;
+  margin-left: 20px;
 }
