--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -13,7 +13,15 @@ body {
 .container {
   display: flex;
   justify-content: center;
-  flex-wrap: no-wrap;
+  flex-wrap: nowrap;
+}
+
+@media only screen and (max-width: 1200px){
+  #mission,
+  #featured,
+  #locations {
+    max-width: 100%;
+  }
 }
 
 /* Header */
@@ -51,6 +59,11 @@ a {
   color: seashell;
 }
 
+@media only screen and (max-width: 1060px){
+  nav {
+    font-size: 0.75rem;
+  }
+}
 /* Main */
 
 #mission {
@@ -65,6 +78,14 @@ a {
   margin: auto;
   background-color: black;
   width: 100%;
+}
+
+@media only screen and (max-width: 1060px){
+  .banner h4 {
+    font-size: 1rem;
+    padding: 0.5rem;
+    line-height: 2rem;
+  }
 }
 
 /* Specials */
@@ -100,6 +121,18 @@ a {
   margin: 15px 40px;
   background-color: black;
   opacity: 1;
+}
+
+@media only screen and (max-width: 1060px){
+  #locations {
+    height: auto;
+    background-position: center;
+    background-size: cover;
+  }
+  .container.locations {
+    flex-wrap: wrap;
+    flex-grow: 1;
+  }
 }
 
 /* Contact */
